<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="fr.univ_lille1.parclille1.activities.AddProblemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:text="@string/prompt_problem_type"
                android:textSize="12sp"
                android:textColor="@color/colorHint"/>

            <Spinner
                android:id="@+id/problem_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="44dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/coordinate_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_problem_coordinate"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/address_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_problem_address"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/description_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_problem_description"
                android:imeOptions="actionUnspecified"
                android:inputType="textMultiLine"
                android:lines="4"
                android:minLines="1"
                android:gravity="top|start"
                android:scrollbars="vertical" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/add_problem_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_add"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
